--- a/openjweb-sys/src/main/resources/application-dev.yml
+++ b/openjweb-sys/src/main/resources/application-dev.yml
@@ -24,9 +24,13 @@ spring:
   datasource:
     ds1:
       type: com.alibaba.druid.pool.DruidDataSource
-      url: jdbc:mysql://localhost:3306/erp?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
-      username: root
-      password: root
+      #url: jdbc:mysql://localhost:3306/erp?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+      #username: root
+      #password: root
+
+      url: jdbc:oracle:thin:@//127.0.0.1:1521/ERP2
+      username: erp
+      password: ZZyc_1826
       #for druid
       initialSize: 5
       minIdle: 5
@@ -46,9 +50,13 @@ spring:
 
     ds2:
       type: com.alibaba.druid.pool.DruidDataSource
-      url: jdbc:mysql://localhost:3306/erp?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
-      username: root
-      password: root
+      #url: jdbc:mysql://localhost:3306/erp?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+      #username: root
+      #password: root
+      url: jdbc:oracle:thin:@//127.0.0.1:1521/ERP2
+      username: erp
+      password: ZZyc_1826
+
   redis:
     database: 0
     host: 127.0.0.1
